fixed group detail overflow

--- a/frontend/src/components/GroupsPage/CreateGroupForm.css
+++ b/frontend/src/components/GroupsPage/CreateGroupForm.css
@@ -33,6 +33,8 @@
 
 .input-box {
     width: 170px;
+    text-overflow: clip;
+    white-space:nowrap;
 }
 
 .url-input-box {
@@ -55,11 +57,6 @@
     border: 2px black solid;
     box-shadow: 2px 2px 2px black;
     background-color: red;
-}
-
-.scroll-to-top-error {
-    top: 0px;
-    scroll-behavior: smooth;
 }
 
 .state-input-box {
